@@ -2,21 +2,23 @@ package com.techstore.service;
 
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.techstore.dto.*;
-import com.techstore.entity.CategorySpecificationTemplate;
-import com.techstore.entity.Product;
-import com.techstore.entity.ProductSpecification;
+import com.techstore.dto.CategorySummaryDTO;
+import com.techstore.dto.ManufacturerSummaryDto;
+import com.techstore.dto.ProductRequestDTO;
+import com.techstore.dto.ProductResponseDTO;
+import com.techstore.dto.ProductSpecificationRequestDTO;
+import com.techstore.dto.ProductSummaryDTO;
 import com.techstore.entity.Category;
-import com.techstore.entity.Brand;
+import com.techstore.entity.CategorySpecificationTemplate;
+import com.techstore.entity.Manufacturer;
+import com.techstore.entity.Product;
+import com.techstore.enums.ProductStatus;
 import com.techstore.exception.BusinessLogicException;
-import com.techstore.repository.CategorySpecificationTemplateRepository;
-import com.techstore.repository.ProductRepository;
-import com.techstore.repository.ProductSpecificationRepository;
-import com.techstore.repository.CategoryRepository;
-import com.techstore.repository.BrandRepository;
 import com.techstore.exception.ResourceNotFoundException;
-import com.techstore.exception.DuplicateResourceException;
-
+import com.techstore.repository.CategoryRepository;
+import com.techstore.repository.CategorySpecificationTemplateRepository;
+import com.techstore.repository.ManufacturerRepository;
+import com.techstore.repository.ProductRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -30,7 +32,6 @@ import java.net.URL;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -41,11 +42,10 @@ import java.util.stream.Collectors;
 public class ProductService {
 
     private final ProductRepository productRepository;
-    private final ProductSpecificationRepository specificationRepository;
     private final CategoryRepository categoryRepository;
-    private final BrandRepository brandRepository;
     private final CategorySpecificationTemplateRepository templateRepository;
     private final ObjectMapper objectMapper;
+    private final ManufacturerRepository manufacturerRepository;
 
     // ===== READ OPERATIONS =====
 
@@ -63,13 +63,6 @@ public class ProductService {
     }
 
     @Transactional(readOnly = true)
-    public ProductResponseDTO getProductBySku(String sku) {
-        Product product = productRepository.findBySku(sku)
-                .orElseThrow(() -> new ResourceNotFoundException("Product not found with SKU: " + sku));
-        return convertToResponseDTO(product);
-    }
-
-    @Transactional(readOnly = true)
     public Page<ProductSummaryDTO> getProductsByCategory(Long categoryId, Pageable pageable) {
         return productRepository.findByActiveTrueAndCategoryId(categoryId, pageable)
                 .map(this::convertToSummaryDTO);
@@ -77,7 +70,7 @@ public class ProductService {
 
     @Transactional(readOnly = true)
     public Page<ProductSummaryDTO> getProductsByBrand(Long brandId, Pageable pageable) {
-        return productRepository.findByActiveTrueAndBrandId(brandId, pageable)
+        return productRepository.findByActiveTrueAndManufacturerId(brandId, pageable)
                 .map(this::convertToSummaryDTO);
     }
 
@@ -102,10 +95,10 @@ public class ProductService {
     @Transactional(readOnly = true)
     public Page<ProductSummaryDTO> filterProducts(Long categoryId, Long brandId,
                                                   BigDecimal minPrice, BigDecimal maxPrice,
-                                                  Boolean inStock, Boolean onSale, String query,
+                                                  ProductStatus status, Boolean onSale, String query,
                                                   Pageable pageable) {
         return productRepository.findProductsWithFilters(categoryId, brandId, minPrice, maxPrice,
-                        inStock, onSale, query, pageable)
+                        status, onSale, query, pageable)
                 .map(this::convertToSummaryDTO);
     }
 
@@ -116,21 +109,16 @@ public class ProductService {
 
         Pageable pageable = Pageable.ofSize(limit);
         return productRepository.findRelatedProducts(productId, product.getCategory().getId(),
-                        product.getBrand().getId(), pageable)
+                        product.getManufacturer().getId(), pageable)
                 .stream()
                 .map(this::convertToSummaryDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // ===== WRITE OPERATIONS =====
 
     public ProductResponseDTO createProduct(ProductRequestDTO requestDTO) {
         log.info("Creating product with specification validation: {}", requestDTO.getSku());
-
-        // Validate SKU uniqueness
-        if (productRepository.existsBySku(requestDTO.getSku())) {
-            throw new DuplicateResourceException("Product with SKU '" + requestDTO.getSku() + "' already exists");
-        }
 
         // Get category templates for validation
         List<CategorySpecificationTemplate> requiredTemplates =
@@ -142,11 +130,6 @@ public class ProductService {
         // Create product
         Product product = convertToEntity(requestDTO);
         product = productRepository.save(product);
-
-        // Save validated specifications using the corrected method ✅
-        if (requestDTO.getSpecifications() != null) {
-            saveProductSpecifications(product, requestDTO.getSpecifications());
-        }
 
         log.info("Product created successfully with id: {}", product.getId());
         return convertToResponseDTO(product);
@@ -170,46 +153,14 @@ public class ProductService {
         }
     }
 
-    //without specifications validations
-//    public ProductResponseDTO createProduct(ProductRequestDTO requestDTO) {
-//        log.info("Creating new product with SKU: {}", requestDTO.getSku());
-//
-//        // Validate SKU uniqueness
-//        if (productRepository.existsBySku(requestDTO.getSku())) {
-//            throw new DuplicateResourceException("Product with SKU '" + requestDTO.getSku() + "' already exists");
-//        }
-//
-//        Product product = convertToEntity(requestDTO);
-//        product = productRepository.save(product);
-//
-//        // Save specifications
-//        if (requestDTO.getSpecifications() != null) {
-//            saveProductSpecifications(product, requestDTO.getSpecifications());
-//        }
-//
-//        log.info("Product created successfully with id: {}", product.getId());
-//        return convertToResponseDTO(product);
-//    }
-
     public ProductResponseDTO updateProduct(Long id, ProductRequestDTO requestDTO) {
         log.info("Updating product with id: {}", id);
 
         Product existingProduct = productRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Product not found with id: " + id));
 
-        // Validate SKU uniqueness (excluding current product)
-        if (productRepository.existsBySkuAndIdNot(requestDTO.getSku(), id)) {
-            throw new DuplicateResourceException("Product with SKU '" + requestDTO.getSku() + "' already exists");
-        }
-
         updateProductFromDTO(existingProduct, requestDTO);
         Product updatedProduct = productRepository.save(existingProduct);
-
-        // Update specifications
-        specificationRepository.deleteByProductId(id);
-        if (requestDTO.getSpecifications() != null) {
-            saveProductSpecifications(updatedProduct, requestDTO.getSpecifications());
-        }
 
         log.info("Product updated successfully with id: {}", id);
         return convertToResponseDTO(updatedProduct);
@@ -237,46 +188,6 @@ public class ProductService {
 
         productRepository.deleteById(id);
         log.info("Product permanently deleted successfully with id: {}", id);
-    }
-
-    // ===== UTILITY METHODS =====
-
-
-// ===== CORRECTED PRODUCT SPECIFICATION SAVE METHOD =====
-
-// Replace the old method in ProductService with this corrected version:
-
-    private void saveProductSpecifications(Product product, List<ProductSpecificationRequestDTO> specDTOs) {
-        // Get all templates for this category to map spec names to templates
-        Map<String, CategorySpecificationTemplate> templateMap =
-                templateRepository.findByCategoryIdOrderBySortOrderAscSpecNameAsc(product.getCategory().getId())
-                        .stream()
-                        .collect(Collectors.toMap(CategorySpecificationTemplate::getSpecName, t -> t));
-
-        List<ProductSpecification> specifications = specDTOs.stream()
-                .map(specDTO -> {
-                    // Find the template for this specification
-                    CategorySpecificationTemplate template = templateMap.get(specDTO.getSpecName());
-                    if (template == null) {
-                        throw new BusinessLogicException("Invalid specification: " + specDTO.getSpecName() +
-                                " is not defined for this category");
-                    }
-
-                    // Validate specification value against template
-                    validateSpecificationValue(specDTO.getSpecValue(), template);
-
-                    // Create ProductSpecification with template reference
-                    ProductSpecification spec = new ProductSpecification();
-                    spec.setSpecValue(specDTO.getSpecValue());
-                    spec.setSpecValueSecondary(specDTO.getSpecValueSecondary()); // For ranges
-                    spec.setSortOrder(template.getSortOrder()); // Use template's sort order
-                    spec.setProduct(product);
-                    spec.setTemplate(template); // Set template reference instead of individual fields
-                    return spec;
-                })
-                .collect(Collectors.toList());
-
-        specificationRepository.saveAll(specifications);
     }
 
     private void validateSpecificationValue(String value, CategorySpecificationTemplate template) {
@@ -348,7 +259,8 @@ public class ProductService {
 
     private List<String> parseAllowedValues(String allowedValuesJson) {
         try {
-            return objectMapper.readValue(allowedValuesJson, new TypeReference<List<String>>() {});
+            return objectMapper.readValue(allowedValuesJson, new TypeReference<List<String>>() {
+            });
         } catch (Exception e) {
             log.warn("Failed to parse allowed values: {}", allowedValuesJson);
             return Collections.emptyList();
@@ -359,25 +271,23 @@ public class ProductService {
         Category category = categoryRepository.findById(dto.getCategoryId())
                 .orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + dto.getCategoryId()));
 
-        Brand brand = brandRepository.findById(dto.getBrandId())
-                .orElseThrow(() -> new ResourceNotFoundException("Brand not found with id: " + dto.getBrandId()));
+        Manufacturer manufacturer = manufacturerRepository.findById(dto.getManufacturerId())
+                .orElseThrow(() -> new ResourceNotFoundException("Brand not found with id: " + dto.getManufacturerId()));
 
         Product product = new Product();
         product.setNameEn(dto.getName());
-        product.setSku(dto.getSku());
-        product.setDescription(dto.getDescription());
-        product.setPrice(dto.getPrice());
+        product.setDescriptionEn(dto.getDescriptionEn());
+        product.setDescriptionBg(dto.getDescriptionBg());
+        product.setPriceClient(dto.getPriceClient());
         product.setDiscount(dto.getDiscount());
-        product.setStockQuantity(dto.getStockQuantity());
         product.setActive(dto.getActive());
         product.setFeatured(dto.getFeatured());
-        product.setImageUrl(dto.getImageUrl());
+        product.setPrimaryImageUrl(dto.getImageUrl());
         product.setAdditionalImages(dto.getAdditionalImages());
-        product.setWarranty(dto.getWarranty());
+        product.setWarranty(Integer.parseInt(dto.getWarranty()));
         product.setWeight(dto.getWeight());
-        product.setDimensions(dto.getDimensions());
         product.setCategory(category);
-        product.setBrand(brand);
+        product.setManufacturer(manufacturer);
 
         return product;
     }
@@ -386,50 +296,46 @@ public class ProductService {
         Category category = categoryRepository.findById(dto.getCategoryId())
                 .orElseThrow(() -> new ResourceNotFoundException("Category not found with id: " + dto.getCategoryId()));
 
-        Brand brand = brandRepository.findById(dto.getBrandId())
-                .orElseThrow(() -> new ResourceNotFoundException("Brand not found with id: " + dto.getBrandId()));
+        Manufacturer manufacturer = manufacturerRepository.findById(dto.getManufacturerId())
+                .orElseThrow(() -> new ResourceNotFoundException("Brand not found with id: " + dto.getManufacturerId()));
 
         product.setNameEn(dto.getName());
-        product.setSku(dto.getSku());
-        product.setDescription(dto.getDescription());
-        product.setPrice(dto.getPrice());
+        product.setDescriptionEn(dto.getDescriptionEn());
+        product.setDescriptionBg(dto.getDescriptionBg());
+        product.setPriceClient(dto.getPriceClient());
         product.setDiscount(dto.getDiscount());
-        product.setStockQuantity(dto.getStockQuantity());
         product.setActive(dto.getActive());
         product.setFeatured(dto.getFeatured());
-        product.setImageUrl(dto.getImageUrl());
+        product.setPrimaryImageUrl(dto.getImageUrl());
         product.setAdditionalImages(dto.getAdditionalImages());
-        product.setWarranty(dto.getWarranty());
+        product.setWarranty(Integer.parseInt(dto.getWarranty()));
         product.setWeight(dto.getWeight());
-        product.setDimensions(dto.getDimensions());
         product.setCategory(category);
-        product.setBrand(brand);
+        product.setManufacturer(manufacturer);
     }
 
     private ProductResponseDTO convertToResponseDTO(Product product) {
         return ProductResponseDTO.builder()
                 .id(product.getId())
                 .name(product.getNameEn())
-                .sku(product.getSku())
-                .description(product.getDescription())
-                .price(product.getPrice())
+                .descriptionBg(product.getDescriptionBg())
+                .descriptionEn(product.getDescriptionEn())
+                .priceClient(product.getPriceClient())
+                .pricePartner(product.getPricePartner())
                 .discount(product.getDiscount())
-                .discountedPrice(product.getDiscountedPrice())
-                .stockQuantity(product.getStockQuantity())
+                .pricePromo(product.getPricePromo())
                 .active(product.getActive())
                 .featured(product.getFeatured())
-                .imageUrl(product.getImageUrl())
+                .primaryImageUrl(product.getPrimaryImageUrl())
                 .additionalImages(product.getAdditionalImages())
                 .warranty(product.getWarranty())
                 .weight(product.getWeight())
-                .dimensions(product.getDimensions())
                 .category(convertToCategorySummary(product.getCategory()))
-                .brand(convertToBrandSummary(product.getBrand()))
-                .specifications(convertToSpecificationDTOs(product.getSpecifications()))
+                .manufacturer(convertToManufacturerSummary(product.getManufacturer()))
                 .createdAt(product.getCreatedAt())
                 .updatedAt(product.getUpdatedAt())
-                .inStock(product.isInStock())
                 .onSale(product.isOnSale())
+                .status(product.getStatus().getCode())
                 .build();
     }
 
@@ -437,18 +343,18 @@ public class ProductService {
         return ProductSummaryDTO.builder()
                 .id(product.getId())
                 .name(product.getNameEn())
-                .sku(product.getSku())
-                .price(product.getPrice())
+                .manufacturerName(product.getManufacturer().getName())
+                .priceClient(product.getPriceClient())
+                .pricePartner(product.getPricePartner())
+                .pricePromo(product.getPricePromo())
+                .priceClientPromo(product.getPriceClientPromo())
                 .discount(product.getDiscount())
-                .discountedPrice(product.getDiscountedPrice())
-                .stockQuantity(product.getStockQuantity())
                 .active(product.getActive())
                 .featured(product.getFeatured())
-                .imageUrl(product.getImageUrl())
+                .primaryImageUrl(product.getPrimaryImageUrl())
                 .categoryName(product.getCategory().getNameEn())
-                .brandName(product.getBrand().getName())
-                .inStock(product.isInStock())
                 .onSale(product.isOnSale())
+                .status(product.getStatus().getCode())
                 .build();
     }
 
@@ -461,27 +367,10 @@ public class ProductService {
                 .build();
     }
 
-    private BrandSummaryDTO convertToBrandSummary(Brand brand) {
-        return BrandSummaryDTO.builder()
+    private ManufacturerSummaryDto convertToManufacturerSummary(Manufacturer brand) {
+        return ManufacturerSummaryDto.builder()
                 .id(brand.getId())
                 .name(brand.getName())
-                .slug(brand.getSlug())
-                .logoUrl(brand.getLogoUrl())
-                .active(brand.getActive())
                 .build();
-    }
-
-    private List<ProductSpecificationDTO> convertToSpecificationDTOs(List<ProductSpecification> specifications) {
-        return specifications.stream()
-                .map(spec -> ProductSpecificationDTO.builder()
-                        .id(spec.getId())
-                        .specName(spec.getSpecName())
-                        .specValue(spec.getSpecValue())
-                        .specUnit(spec.getSpecUnit())
-                        .specGroup(spec.getSpecGroup())
-                        .sortOrder(spec.getSortOrder())
-                        .formattedValue(spec.getFormattedValue())
-                        .build())
-                .collect(Collectors.toList());
     }
 }
